<resources>
    <string name="app_name">Hungry English</string>
    <string name="title_activity_register">Register</string>
    <string name="full_name">Full Name/全名</string>
    <string name="msg">Create an Account/创建帐户</string>
    <string name="user_name">Username/Email - 用户名/邮箱</string>
    <string name="email">Email/邮件</string>
    <string name="password">Password/密码</string>
    <string name="signup">Sign up/注册</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="doyouhaveaccount">Do not have an account?</string>
    <string name="login">Login/登录</string>
    <string name="msg_login">Please login into your account.</string>
    <string name="openaccount">Create An Account/创建帐户</string>
    <string name="parent_msg">Student / Parent Information/学生/家长信息</string>
    <string name="age_student">Age of Student/学生年龄</string>
    <string name="year_of_english_exp">Years of English Experence/多年英语经验</string>
    <string name="nearest_railway_station">Nearest Railway Station</string>
    <string name="address">Address/地址</string>
    <string name="file_downloaded">File Downloaded Sucessfully.</string>
    <string name="radio_male">Male/男</string>
    <string name="radio_female">Female/女</string>
    <string name="submit">Submit/提交</string>
    <string name="email_validation">Enter Valid Email/输入正确的邮箱地址</string>
    <string name="password_validation">Password Must be grater then 6 charcters</string>
    <string name="no_internet">Please check your Internet Connection/检查网络是否连接</string>
    <string name="loginfail">Please enter a valid Email Password</string>
    <string name="user_name_validation">Username Must be greater than 4 charcters</string>
    <string name="full_name_validation">Enter Full Name</string>
    <string name="internet_connection_error">Hungry English requires an internet connection.Make sure Wi-Fi or mobile networks are turned on, then try again.</string>
    <string name="wechat">Wechat ID</string>
    <string name="applyasteacher">Apply as Teacher</string>
    <string name="teacher_profile">Teacher Profile</string>
    <string name="upload_id">Upload ID Proof</string>
    <string name="current_workplace">Current Workplace/目前的工作</string>
    <string name="avaibility">Avaibility/可用性</string>
    <string name="upload_cv">Upload CV</string>
    <string name="parent_profile">Parent Profile/家长信息</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="location">Address ( Location )/地址</string>
    <string name="sucess_external_storage_msg">Hungry English will use your storage.</string>
    <string name="error_permission_msg">Hungry English may use extra utilities..</string>
    <string name="logout">Logout</string>
    <string name="teacher_name">Name :</string>
    <string name="teacher_email">Email :</string>
    <string name="teacher_mobile_no">wechat id :</string>
    <string name="teacher_avaibility">Avaibility</string>
    <string name="special_skils">Special Skill</string>
    <string name="special_skils_label">Special Skill : </string>
    <string name="teacher_avaibility_label">Avaibility : </string>
    <string name="nearest_railway_station_label">Nearest Railway Station : </string>

    <string name="alert_msg">Alert Msg</string>
    <string name="ok">OK</string>
    <string name="choose_file">Choose File</string>
    <string name="internet_error">Internet Connection !</string>
    <string name="accept_invitation">Accept</string>
    <string name="student_list">Student List</string>
    <string name="teacher_list">Teacher List</string>
    <string name="add_image_link"><![CDATA[Add Image / Links]]></string>
    <string name="edit">Edit</string>
    <string name="logout_note">Would you like to logout from Hungry English?</string>
    <string name="cancel">Cancel</string>
    <string name="linksforref">Links for reference.</string>
    <string name="mobile_or_wechat">Mobile/Wechat ID</string>
    <string name="report_teacher">View Teacher/查看老师档案 </string>
    <string name="right_reseved">© André Roberts 2017 - All Rights Reserved</string>
    <string name="forgot_password">Forgot password ? Click here</string>
    <string name="msg_forgot_passowrd">Enter Register Email to Receive OTP.</string>
    <string name="OTP">OTP</string>
    <string name="msg_reset_passoword">Enter a New Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="resend_otp">Resend OTP ! Click here</string>
    <string name="msg_otp">Enter Received OTP</string>
    <string name="requst_teacher">Request Teacher</string>
    <string name="url">URL</string>
    <string name="report">Report</string>
    <string name="generate_report">Generate Reports</string>
    <string name="loading">Loading..</string>
    <string name="report_sucess">Report created sucessfully.</string>
    <string name="error_something_wrong">Something went wrong.</string>
</resources>


