<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/parent_msg"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/fullNameStudentEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

            </RadioGroup>

            <EditText
                android:id="@+id/ageEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/age_student"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/yearOfExpEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/year_of_english_exp"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/nearRailwayStationEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/nearest_railway_station"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/addressEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/specialSkillsEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/special_skils"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_verify_otp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>