<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.raivatshikhar.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_splash" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg_login"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/activity_login_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/activity_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_verify_otp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/doyouhaveaccount"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/openaccount"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
