<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <LinearLayout
        android:id="@+id/ll_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_forgot_passowrd"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/activity_forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/activity_forgot_password_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_btn_verify_otp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_enter_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_otp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/activity_forgot_password_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt"
                android:gravity="center_vertical"
                android:hint="@string/OTP"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/activity_forgot_password_otp_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_btn_verify_otp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/password_reset_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_reset_passoword"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/activity_forgot_password_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/activity_forgot_password_re_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt"
                android:gravity="center_vertical"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/activity_forgot_password_submit_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_btn_verify_otp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

</LinearLayout>
