<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="app.com.HungryEnglish.Activity.RegisterActivity"
              tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/activity_register_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/activity_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/activity_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/activity_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/activity_register_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/wechat"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/activity_register_is_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:checked="false"
                android:padding="@dimen/_5sdp"
                android:text="@string/applyasteacher"/>

            <Button
                android:id="@+id/activity_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_verify_otp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/alreadyhaveaccount"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"/>

            <Button
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/right_reseved"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
